--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
-  <title>CodingJS</title>
+  <title>Borland's CodingJS</title>
   <link href="https://fonts.googleapis.com/css?family=Trirong" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" media="screen">
   <link rel="stylesheet" type="text/css" href="css/codemirror.css">
 </head>
+
 <body>
   <div class="main">
     <p class="heading"><img src="img/favicon-96x96.png" width="32px" />&nbsp;<b>CodingJS</b></p>
-    <p class="subheading">Solve programming problems in Javascript or TypeScript!<br/>
-       <em>This site will only store your progress within your current web browser.<br>
-          To keep your solutions permanently, be sure to save your solution as a file.</em>
-    </p>
+    <p class="subheading">Solve programming problems from our class</p>
 
     <div id="topButtonContainer">
       <button class="btn-top" id="saveAll">Save All Solutions</button>
@@ -28,9 +27,9 @@
   </div>
 
   <footer>
-    <em>Adapted by the-winter and contributors, based on Nick Parlante's <a class="links"href="http://codingbat.com/">CodingBat</a>.</em>
+    <em>Adapted by the-winter and contributors, based on Nick Parlante's <a class="links" href="http://codingbat.com/">CodingBat</a>.</em>
   </footer>
 </body>
-  <script src="dist/bundle.js"></script>
+<script src="dist/bundle.js"></script>
 
 </html>
