--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
     <em>Adapted by the-winter and contributors, based on Nick Parlante's <a class="links" href="http://codingbat.com/">CodingBat</a>.</em>
   </footer>
 </body>
-<script src="dist/bundle.js"></script>
+<script src="dist/bundle.js?v=2"></script>
 
 </html>
